feat: contact form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@
 
 	--color-default-text: #ffffff;
 	--color-default-text-strong: #dedede;
+	--color-placeholder: #1d1c24;
 
 	--color-section-background: #121721;
 	--color-background: #12111a;
